--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+	  "@angular/cli": "^1.0.1",
+    "@angular/compiler-cli": "^4.0.0",
+	  "typescript": "~2.2.0"
+  
   },
   "devDependencies": {
     "@angular/cli": "^1.0.1",
