--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
 	 "build": "ng build",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
@@ -28,7 +27,7 @@
     "zone.js": "^0.8.4",
 	  "@angular/cli": "^1.0.1",
     "@angular/compiler-cli": "^4.0.0",
-	  "typescript": "~2.2.0"
+	  "typescript": "2.1.0"
   
   },
   "devDependencies": {
